pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-service
spec:
  selector:
    app: pacman
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
