pacman-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: pacman.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pacman-service
                port:
                  number: 80
